lidarr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  type: ClusterIP
  ports:
    - port: 8686
      targetPort: lidarr
  selector:
    app: lidarr
    part-of: lidarr
